<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ChangePassActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pass"
            android:layout_marginLeft="20dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/advent_pro_bold"
            android:textSize="20dp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/LayoutInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txtPassNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass_saat_ini"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/desc_change_pass"
            android:textStyle="bold"
            android:textSize="18dp"
            android:fontFamily="@font/advent_pro_bold"/>

        <android.support.design.widget.TextInputLayout
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txtPassNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass_baru"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txtPassKonf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/konfirmasi_pass"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnChangPass"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/change_pass"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>